# RA-labosi

./: README.md
Labos1/include/animation/: Trajectory.h
Labos1/src/: main.cpp
Labos1/src/mg/: Object.cpp  Vertex.cpp
Labos2/: CMakeLists.txt
Labos2/include/mg/: Object.h  Triangle.h  Vertex.h
Labos2/include/ps/: Color.h  Particle.h
Labos2/src/: main.cpp
Labos2/src/animation/: Trajectory.cpp
Labos2/src/mg/: Object.cpp  Triangle.cpp
Projekt/: CMakeLists.txt
Projekt/include/: Camera.h  Display.h  Loader.h  Shader.h
Projekt/shaders/: VertexShader.glsl  mandelbulb.glsl
Projekt/src/: Display.cpp  Loader.cpp  Shader.cpp  main.cpp
